<resources>
    <string name="app_name">Guests</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_present">Presentes</string>
    <string name="menu_absent">Ausentes</string>
    <string name="all_guests">Todos os convidados</string>
    <string name="nombre">Nome</string>
    <string name="presence">Presença</string>
    <string name="presente">Presente</string>
    <string name="ausente">Ausente</string>
    <string name="save">Salvar</string>
    <string name="convidado">Convidado</string>
    <string name="remover">Remover</string>
</resources>