<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".GuestFormActivity">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <EditText
        android:id="@+id/spaceName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name"/>
    <TextView
        android:id="@+id/presence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/presence"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/spaceName"
        app:layout_constraintStart_toStartOf="parent"/>
   <RadioGroup
       android:id="@+id/radioGroup"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="8dp"
       app:layout_constraintTop_toBottomOf="@id/presence"
       app:layout_constraintStart_toStartOf="parent">
       <RadioButton
           android:id="@+id/buttonPresent"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/presente"
           app:layout_constraintTop_toBottomOf="@id/presence"
           app:layout_constraintStart_toStartOf="parent"/>
       <RadioButton
           android:id="@+id/buttonAbsent"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/ausente"
           app:layout_constraintTop_toBottomOf="@id/buttonPresent"
           app:layout_constraintStart_toStartOf="parent"/>
       />
   </RadioGroup>

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/radioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/save"
        android:layout_marginTop="16dp"
        />





</androidx.constraintlayout.widget.ConstraintLayout>